--- a/BonitaVita/main/templates/main/about/about.html
+++ b/BonitaVita/main/templates/main/about/about.html
@@ -18,11 +18,11 @@
         <nav>
           <div class="desktop-menu">
             <ul>
-                <li><a href="about.html">Главная</a></li>     
-                <li><a href="novelties.html">Новинки</a></li>
+                <li><a href="#">Главная</a></li>     
+                <li><a href="#novelties">Новинки</a></li>
                 <li><a href="#assortment">!Ассортимент</a></li>
                 <li><a href="#create_soap">!Создать мыло</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
+                <li><a href="contacts">Контакты</a></li>
             </ul>
         </div>
         </nav>
