--- a/admin/ingredients_files/style.css
+++ b/admin/ingredients_files/style.css
@@ -141,6 +141,12 @@ li:last-child a {
     vertical-align: middle;
 }
 
+#addIngredientButton input,
+#addIngredientButton button {
+    display: block;
+    margin-bottom: 10px; /* Optional: Add some spacing between input and button */
+}
+
 #content button {
     background-color: #3498db;
     color: white;
