--- a/assortment/assortments_files/style.css
+++ b/assortment/assortments_files/style.css
@@ -31,6 +31,7 @@ header {
 #text-box {
     text-align: center;
     margin-top: 150px;
+    margin-bottom: 150px;
     font-size: 72px;
     color: #fff;
 }
@@ -88,8 +89,6 @@ li:last-child a {
     padding: 20px;
     font-size: 22px;
     line-height: 1.5;
-    margin-top: 150px;
-    margin-bottom: 100px;
     background-color: rgba(233, 181, 156, 0.92);
     border-radius: 10px;
     display: flex;
@@ -130,6 +129,14 @@ li:last-child a {
     transition: background-color 0.3s ease;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+}
+
+#section-title {
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-size: 48px;
+    color: #fff;
 }
 
 
