--- a/assortment/assortments_files/style.css
+++ b/assortment/assortments_files/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('images/background.jpg');
+    background-image: url('../images/background/background2.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -31,7 +31,6 @@ header {
 #text-box {
     text-align: center;
     margin-top: 150px;
-    margin-bottom: 150px;
     font-size: 72px;
     color: #fff;
 }
@@ -47,7 +46,7 @@ header {
     margin-right: 10px;
 }
 
-.site-info h1 {
+.site-info p {
     margin: 0;
     font-size: 24px;
 }
@@ -69,10 +68,6 @@ nav a {
     font-size: 18px;
 }
 
-li:last-child a {
-    color: lightcoral; /* Set the color for the last link to red */
-}
-
 .fixed-header {
     position: fixed;
     top: 0;
@@ -80,6 +75,18 @@ li:last-child a {
     z-index: 1000;
     background-color: #333;
     padding: 10px 20px;
+}
+
+#mobile-menu-button {
+    display: none; 
+}
+
+.desktop-menu {
+    display: flex;
+}
+
+.mobile-menu {
+    display: none;
 }
 
 
@@ -141,7 +148,7 @@ li:last-child a {
 
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 756px) {
     body::after {
         content: none;
     }
@@ -159,7 +166,7 @@ li:last-child a {
         width: 30px;
     }
 
-    .site-info h1 {
+    .site-info p {
         font-size: 18px;
     }
 
@@ -174,6 +181,29 @@ li:last-child a {
 
     .desktop-menu {
         display: none;
+    }
+
+    .mobile-menu {
+        display: block;
+    }
+
+    #mobile-menu-button {
+        display: block;
+        background: none;
+        border: none;
+        font-size: 18px;
+        color: white;
+        cursor: pointer;
+    }
+
+    .mobile-menu ul {
+        display: none;
+    }
+
+    .mobile-menu.active ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     #content {
