--- a/assortment/assortments_files/style.css
+++ b/assortment/assortments_files/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../images/background/background2.jpg');
+    background-image: url('../../images/background/background2.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
