--- a/contacts/contacts_files/style.css
+++ b/contacts/contacts_files/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('images/background.jpg');
+    background-image: url('../../images/background/background5.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -46,7 +46,7 @@ header {
     margin-right: 10px;
 }
 
-.site-info h1 {
+.site-info p {
     margin: 0;
     font-size: 24px;
 }
@@ -75,6 +75,18 @@ nav a {
     z-index: 1000;
     background-color: #333;
     padding: 10px 20px;
+}
+
+#mobile-menu-button {
+    display: none; 
+}
+
+.desktop-menu {
+    display: flex;
+}
+
+.mobile-menu {
+    display: none;
 }
 
 
@@ -110,7 +122,7 @@ nav a {
 
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 756px) {
     body::after {
         content: none;
     }
@@ -148,11 +160,13 @@ nav a {
     #content {
         flex-direction: column;
         text-align: center;
+        font-size: 24px;
+        margin-top: -10px;
     }
 
     #content img {
         margin-right: 0; /* Remove margin on small screens */
-        margin-bottom: 20px; /* Add space between image and text */
+        margin-bottom: 5px; /* Add space between image and text */
         margin-left: auto; /* Center the image horizontally */
         margin-right: auto;
         display: block;
@@ -160,5 +174,32 @@ nav a {
 
     #content div {
         width: 100%; /* Make the text full width on small screens */
+    }
+
+    .desktop-menu {
+        display: none;
+    }
+
+    .mobile-menu {
+        display: block;
+    }
+
+    #mobile-menu-button {
+        display: block;
+        background: none;
+        border: none;
+        font-size: 18px;
+        color: white;
+        cursor: pointer;
+    }
+
+    .mobile-menu ul {
+        display: none;
+    }
+
+    .mobile-menu.active ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
