--- a/create/create_files/style.css
+++ b/create/create_files/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('images/background.jpg');
+    background-image: url('../../images/background/background3.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -46,7 +46,7 @@ header {
     margin-right: 10px;
 }
 
-.site-info h1 {
+.site-info p {
     margin: 0;
     font-size: 24px;
 }
@@ -77,6 +77,18 @@ nav a {
     padding: 10px 20px;
 }
 
+#mobile-menu-button {
+    display: none; 
+}
+
+.desktop-menu {
+    display: flex;
+}
+
+.mobile-menu {
+    display: none;
+}
+
 
 
 #content {
@@ -98,7 +110,7 @@ nav a {
 
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 756px) {
     body::after {
         content: none;
     }
@@ -142,5 +154,32 @@ nav a {
     img {
         width: 100%;
         height: auto;
+    }
+
+    .desktop-menu {
+        display: none;
+    }
+
+    .mobile-menu {
+        display: block;
+    }
+
+    #mobile-menu-button {
+        display: block;
+        background: none;
+        border: none;
+        font-size: 18px;
+        color: white;
+        cursor: pointer;
+    }
+
+    .mobile-menu ul {
+        display: none;
+    }
+
+    .mobile-menu.active ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
