--- a/create/create_files/style.css
+++ b/create/create_files/style.css
@@ -68,6 +68,10 @@ nav a {
     font-size: 18px;
 }
 
+li:last-child a {
+    color: lightcoral;
+}
+
 .fixed-header {
     position: fixed;
     top: 0;
