Added bottom icons.

--- a/contacts/contacts_files/style.css
+++ b/contacts/contacts_files/style.css
@@ -124,6 +124,16 @@ li:last-child a {
     margin-bottom: -15px;
 }
 
+#content a {
+    color: #3498db;
+    text-decoration: none;
+}
+
+#content a:hover {
+    color: #2980b9;
+    text-decoration: underline;
+}
+
 
 
 @media only screen and (max-width: 756px) {
