--- a/index_files/style.css
+++ b/index_files/style.css
@@ -93,7 +93,6 @@ li:last-child a {
     font-size: 32px;
     line-height: 1.5;
     margin-top: 150px;
-    margin-bottom: 100px;
     background-color: rgba(233, 181, 156, 0.92);
     border-radius: 10px;
 }
@@ -130,6 +129,20 @@ img {
 }
 
 
+
+#social-links {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.social-icon {
+    width: 60px;
+    height: 60px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+}
 
 @media only screen and (max-width: 756px) {
     body::after {
@@ -192,7 +205,6 @@ img {
     #content {
         font-size: 18px;
         margin-top: 50px;
-        margin-bottom: 50px;
     }
 
     img {
