--- a/create/create_files/style.css
+++ b/create/create_files/style.css
@@ -101,7 +101,6 @@ li:last-child a {
     font-size: 32px;
     line-height: 1.5;
     margin-top: 150px;
-    margin-bottom: 100px;
     background-color: rgba(233, 181, 156, 0.92);
     border-radius: 10px;
 }
@@ -113,6 +112,20 @@ li:last-child a {
 }
 
 
+
+#social-links {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.social-icon {
+    width: 60px;
+    height: 60px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+}
 
 @media only screen and (max-width: 756px) {
     body::after {
