--- a/assortment/assortments_files/style.css
+++ b/assortment/assortments_files/style.css
@@ -225,13 +225,27 @@ li:last-child a {
     }
 
     #content {
-        font-size: 28px;
-        margin-top: 50px;
-        margin-bottom: 50px;
+        font-size: 18px;
+        margin-top: 0px;
+        margin-bottom: 0px;
     }
 
-    img {
-        width: 100%;
+    #content > div {
+        margin: 20px;
+        width: 95%;
+    }
+    
+    #content img {
+        width: 90%;
         height: auto;
+    }
+    
+    #content button {
+        padding: 12px 90px;
+        font-size: 18px;
+    }
+
+    #section-title {
+        font-size: 28px;
     }
 }
