--- a/soap_files/style.css
+++ b/soap_files/style.css
@@ -210,11 +210,12 @@ li:last-child a {
 
     #content {
         font-size: 22px;
-        flex-direction: column; /* Stack items vertically for mobile screens */
+        margin-top: 0px;
+        flex-direction: column;
     }
 
     .product-details {
-        margin-left: 0; /* Reset margin for mobile screens */
+        margin-left: 0;
         width: 95%;
     }
 
