--- a/files/index_files/style.css
+++ b/files/index_files/style.css
@@ -1,131 +1,5 @@
 body {
-    background-image: url('../images/background/background0.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    font-family: 'Comfortaa', cursive;
-    margin: 0;
-}
-
-body::after {
-    content: "";
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.35);
-    z-index: -1;
-}
-
-header {
-    background-color: #333;
-    color: white;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-#text-box {
-    text-align: center;
-    margin-top: 150px;
-    font-size: 72px;
-    color: #fff;
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-}
-
-.logo img {
-    width: 50px;
-    height: auto;
-    margin-right: 10px;
-}
-
-.site-info p {
-    margin: 0;
-    font-size: 24px;
-}
-
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-nav li {
-    margin-right: 20px;
-}
-
-nav a {
-    text-decoration: none;
-    color: white;
-    font-size: 18px;
-}
-
-li:last-child a {
-    color: lightcoral;
-}
-
-.fixed-header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
-    background-color: #333;
-    padding: 10px 20px;
-}
-
-#mobile-menu-button {
-    display: none; 
-}
-
-.desktop-menu {
-    display: flex;
-}
-
-.mobile-menu {
-    display: none;
-}
-
-.language-switch {
-    position: relative;
-    float: right;
-    margin-right: 20px;
-}
-
-.language-switch a {
-    display: inline-block;
-}
-
-.language-switch img {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-}
-
-.language-menu {
-    display: none;
-    position: absolute;
-    right: 0;
-    top: 100%;
-    background-color: #333;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    z-index: 1;
-}
-
-.language-menu li {
-    padding: 10px;
-    cursor: pointer;
-}
-
-.language-menu li:hover {
-    background-color: #333;
+    background-image: url('../../images/background/background0.jpg');
 }
 
 
@@ -173,78 +47,7 @@ img {
 
 
 
-#social-links {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-}
-
-.social-icon {
-    width: 60px;
-    height: 60px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 20px;
-}
-
 @media only screen and (max-width: 768px) {
-    body::after {
-        content: none;
-    }
-
-    header {
-        padding: 10px;
-    }
-
-    #text-box {
-        margin-top: 50px;
-        font-size: 36px;
-    }
-
-    .logo img {
-        width: 30px;
-    }
-
-    .site-info p {
-        font-size: 18px;
-    }
-
-    nav ul {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    nav li {
-        margin: 10px 0;
-    }
-
-    .desktop-menu {
-        display: none;
-    }
-
-    .mobile-menu {
-        display: block;
-    }
-
-    #mobile-menu-button {
-        display: block;
-        background: none;
-        border: none;
-        font-size: 18px;
-        color: white;
-        cursor: pointer;
-    }
-
-    .mobile-menu ul {
-        display: none;
-    }
-
-    .mobile-menu.active ul {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
     #content {
         font-size: 18px;
         margin-top: 50px;
