--- a/files/soap_files/style.css
+++ b/files/soap_files/style.css
@@ -1,141 +1,24 @@
 body {
-    background-image: url('../images/background/background4.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    font-family: 'Comfortaa', cursive;
-    margin: 0;
+    background-image: url('../../images/background/background4.jpg');
 }
 
-body::after {
-    content: "";
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.35);
-    z-index: -1;
-}
 
-header {
-    background-color: #333;
-    color: white;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
 
-#text-box {
-    text-align: center;
-    margin-top: 150px;
-    font-size: 72px;
-    color: #fff;
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-}
-
-.logo img {
-    width: 50px;
-    height: auto;
-    margin-right: 10px;
-}
-
-.site-info p {
-    margin: 0;
+#text-box p:nth-child(2) {
+    margin-top: -80px;
     font-size: 24px;
 }
 
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+#cost {
+    font-size: 42px;
 }
-
-nav li {
-    margin-right: 20px;
-}
-
-nav a {
-    text-decoration: none;
-    color: white;
-    font-size: 18px;
-}
-
-li:last-child a {
-    color: lightcoral;
-}
-
-.fixed-header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
-    background-color: #333;
-    padding: 10px 20px;
-}
-
-#mobile-menu-button {
-    display: none; 
-}
-
-.desktop-menu {
-    display: flex;
-}
-
-.mobile-menu {
-    display: none;
-}
-
-.language-switch {
-    position: relative;
-    float: right;
-    margin-right: 20px;
-}
-
-.language-switch a {
-    display: inline-block;
-}
-
-.language-switch img {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-}
-
-.language-menu {
-    display: none;
-    position: absolute;
-    right: 0;
-    top: 100%;
-    background-color: #333;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    z-index: 1;
-}
-
-.language-menu li {
-    padding: 10px;
-    cursor: pointer;
-}
-
-.language-menu li:hover {
-    background-color: #333;
-}
-
-
 
 #content {
     display: flex;
-    justify-content: centered;
+    justify-content: center;
     align-items: center;
     padding: 20px;
-    font-size: 32px;
+    font-size: 26px;
     line-height: 1.2;
     margin-top: 150px;
     background-color: rgba(233, 181, 156, 0.92);
@@ -143,6 +26,7 @@ li:last-child a {
 }
 
 .image-carousel {
+    margin-left: 5%;
     display: block;
     width: 520px;
     height: 520px;
@@ -163,6 +47,7 @@ li:last-child a {
     width: 40%;
     width: 1000px;
     margin-left: 80px;
+    margin-right: 5%;
 }
 
 .product-details p {
@@ -171,81 +56,16 @@ li:last-child a {
 
 
 
-#social-links {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-}
-
-.social-icon {
-    width: 60px;
-    height: 60px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 20px;
-}
-
 @media only screen and (max-width: 768px) {
-    body::after {
-        content: none;
-    }
-
-    header {
-        padding: 10px;
-    }
-
-    #text-box {
-        margin-top: 50px;
-        font-size: 36px;
-    }
-
-    .logo img {
-        width: 30px;
-    }
-
-    .site-info p {
+    #text-box p:nth-child(2) {
+        margin-top: -10px;
         font-size: 18px;
-    }
-
-    nav ul {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    nav li {
-        margin: 10px 0;
-    }
-
-    .desktop-menu {
-        display: none;
-    }
-
-    .mobile-menu {
-        display: block;
-    }
-
-    #mobile-menu-button {
-        display: block;
-        background: none;
-        border: none;
-        font-size: 18px;
-        color: white;
-        cursor: pointer;
-    }
-
-    .mobile-menu ul {
-        display: none;
-    }
-
-    .mobile-menu.active ul {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
     }
 
     #content {
         font-size: 22px;
         margin-top: 0px;
+        margin-right: -5%;
         flex-direction: column;
     }
 
@@ -255,12 +75,13 @@ li:last-child a {
     }
 
     .image-carousel {
-        width: 95%;
+        width: 90%;
+        margin-left: -5%;
         height: auto;
     }
     
     .carousel-image {
-        width: 90%;
+        width: 85%;
         height: auto;
     }
 }
