Added another languages indexes and updated create page.

--- a/files/style.css
+++ b/files/style.css
@@ -129,6 +129,16 @@ li:last-child a {
     background-color: #333;
 }
 
+#content a {
+    color: #3498db;
+    text-decoration: none;
+}
+
+#content a:hover {
+    color: #2980b9;
+    text-decoration: underline;
+}
+
 
 
 /* Page Bottom */
