--- a/files/assortments_files/style.css
+++ b/files/assortments_files/style.css
@@ -1,5 +1,7 @@
 body {
     background-image: url('../../images/background/buble.jpg');
+    background-repeat: repeat;
+    background-size: 750px 750px;
 }
 
 
@@ -7,8 +9,8 @@ body {
 #content {
     text-align: center;
     padding: 20px;
-    font-size: 32px;
-    line-height: 1;
+    font-size: 22px;
+    line-height: 1.5;
     background-color: rgba(233, 181, 156, 0.92);
     border-radius: 10px;
     display: flex;
@@ -17,7 +19,7 @@ body {
 }
 
 #content > div {
-    margin: 20px;
+    margin: 50px;
     width: 380px;
     box-sizing: border-box;
     border: 1px solid #000;
@@ -49,6 +51,12 @@ body {
     transition: background-color 0.3s ease;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+}
+
+#content button.view:hover {
+    background-color: #e9dc9c;
+    color: black;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 #section-title {
