--- a/files/create_files/style.css
+++ b/files/create_files/style.css
@@ -20,6 +20,89 @@ body {
     margin-right: auto;
 }
 
+.spoiler-content {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; /* Adjust the gap between images as needed */
+}
+
+.spoiler-content label {
+    width: calc(15% - 10px); /* 25% width for each image, considering the gap */
+    margin-bottom: 10px; /* Adjust the margin as needed */
+    box-sizing: border-box;
+}
+
+.item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: calc(15% - 15px);
+    overflow: hidden;
+    cursor: pointer;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    transition: border-color 0.3s ease;
+    margin-bottom: 10px;
+}
+
+.item.selected {
+    border-color: #4CAF50; /* Change border color for selected item */
+}
+
+.item:hover {
+    border-color: #4CAF50; /* Change border color on hover */
+}
+
+.item.checked {
+    border-color: #e51e92;
+    border-width: 2px;
+}
+
+.item img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 8px 8px 0 0; /* Rounded corners for the top */
+}
+
+.checkbox {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    opacity: 0; /* Hide the actual checkbox */
+    z-index: 1;
+}
+
+.item-content {
+    padding: 8px;
+    flex-grow: 1;
+    text-align: center;
+}
+
+.item p {
+    margin: 8px 0;
+    font-size: 18px;;
+}
+
+#checkboxLabel input[type="checkbox"] {
+    opacity: 0;
+    position: absolute;
+    width: 0;
+    height: 0;
+}
+
+#checkboxLabel.checked::before {
+    content: '\2713'; /* Unicode character for checkmark */
+    font-size: 20px;
+    color: #4CAF50;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
 
 
 @media only screen and (max-width: 768px) {
