--- a/files/create_files/style.css
+++ b/files/create_files/style.css
@@ -21,28 +21,40 @@ body {
 }
 
 .spoiler-content {
-    display: flex;
     flex-wrap: wrap;
-    gap: 10px; /* Adjust the gap between images as needed */
+    gap: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.image-container {
+    display: flex;
+    justify-content: center;
 }
 
 .spoiler-content label {
     width: calc(15% - 10px); /* 25% width for each image, considering the gap */
     margin-bottom: 10px; /* Adjust the margin as needed */
     box-sizing: border-box;
+    margin: 10px;
 }
 
 .item {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: calc(15% - 15px);
+    justify-content: center; /* Center the content vertically */
     overflow: hidden;
     cursor: pointer;
     border: 2px solid #ccc;
     border-radius: 8px;
     transition: border-color 0.3s ease;
     margin-bottom: 10px;
+}
+
+.item-content {
+    text-align: center;
+    position: relative;
 }
 
 .item.selected {
@@ -85,15 +97,15 @@ body {
     font-size: 18px;;
 }
 
-#checkboxLabel input[type="checkbox"] {
+.styled-checkbox {
     opacity: 0;
     position: absolute;
     width: 0;
     height: 0;
 }
 
-#checkboxLabel.checked::before {
-    content: '\2713'; /* Unicode character for checkmark */
+.styled-checkbox:checked + .item-content::before {
+    content: '\2713';
     font-size: 20px;
     color: #4CAF50;
     position: absolute;
