--- a/ru/create/prove-order/temp.css
+++ b/ru/create/prove-order/temp.css
@@ -2,8 +2,6 @@ body {
     background-image: url('../../images/background/background3.jpg');
 }
 
-
-
 #content {
     text-align: center;
     padding: 20px;
@@ -20,11 +18,11 @@ body {
     margin-right: auto;
 }
 
-.spoiler-content {
+.element {
     flex-wrap: wrap;
-    display: flex;
     justify-content: center;
     flex-direction: row;
+    display: inline-block;
 }
 
 .image-container {
@@ -33,31 +31,32 @@ body {
 }
 
 .element {
-    width: calc(15% - 10px);
-    margin-bottom: 10px; /* Adjust the margin as needed */
+    display: inline-block;
+    margin: 4px;
+    width: auto; /* Adjust the percentage as needed */
     box-sizing: border-box;
-    margin: 10px;
 }
 
 label {
-    width: calc(15% - 10px);
-    margin-bottom: 10px; /* Adjust the margin as needed */
+    width: 100%;
+    margin-bottom: 10px;
     box-sizing: border-box;
-    margin: 10px;
+    margin: 4px;
 }
 
-item {
+.item {
     display: flex;
-    flex-direction: column; /* Default layout for each item */
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 200px; /* Set a fixed width for each item */
-    margin: 10px;
+    width: 200px;
+    margin: 4px;
     border: 2px solid #ccc;
     border-radius: 8px;
     transition: border-color 0.3s ease;
     cursor: pointer;
-  }
+    height: 280px;
+}
 
 .item-content {
     text-align: center;
@@ -65,24 +64,22 @@ item {
 }
 
 .item.selected {
-    border-color: #4CAF50; /* Change border color for selected item */
+    border-color: gray;
 }
 
 .item:hover {
-    border-color: #4CAF50; /* Change border color on hover */
-    border-width: 4px;
+    border-color: gold;
 }
 
 .item.checked {
     border-color: #4CAF50;
-    border-width: 4px;
 }
 
 .item img {
     width: 100%;
     height: auto;
     display: block;
-    border-radius: 8px; /* Rounded corners for the top */
+    border-radius: 8px;
 }
 
 .checkbox {
@@ -90,7 +87,7 @@ item {
     top: 10px;
     right: 10px;
     cursor: pointer;
-    opacity: 0; /* Hide the actual checkbox */
+    opacity: 0;
     z-index: 1;
 }
 
@@ -102,7 +99,7 @@ item {
 
 .item p {
     margin: 8px 0;
-    font-size: 18px;;
+    font-size: 18px;
 }
 
 .styled-checkbox {
@@ -118,27 +115,84 @@ item {
     background-color: #fff;
     border: 1px solid #ccc;
     padding: 10px;
-    z-index: 999; /* Set a higher z-index to make it appear above other elements */
+    z-index: 999;
 }
 
 .item:hover .popup-content {
     display: block;
 }
 
-.spoiler-content.checked {
+.element-content.checked {
     flex-direction: column;
     align-items: center;
 }
 
-.spoiler-content.checked label {
+.element-content.checked label {
     width: 100%;
     margin: 10px 0;
 }
 
+#message {
+    width: 60%;
+    margin-top: 10px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    padding: 12px;
+    box-sizing: border-box;
+    outline: none;
+    font-size: 16px;
+    transition: border-color 0.3s;
+    resize: vertical; /* Allows vertical resizing */
+    min-height: 72px;
+}
+
+#message:focus {
+    border-color: #ff4d4d;
+}
+
+.button-container {
+    margin-top: 0px;
+}
+
+#content button {
+    background-color: rgba(118, 168, 141, 0.92);
+    color: white;
+    padding: 12px 90px;
+    font-size: 28px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
+
+#content button.view:hover {
+    background-color: #e9dc9c;
+    color: black;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
 
 @media only screen and (max-width: 768px) {
-    .spoiler-content label {
-        width: calc(45% - 10px);
-        margin: 10px;
+    #content {
+        font-size: 18px;
+        margin-top: 50px;
     }
+
+    .element {
+        width: calc(45% - 10px);
+    }
+
+    .item {
+        width: 95%;
+        height: auto;
+        margin: 0;
+    }
+
+    .item p {
+        margin: 2px 0;
+        font-size: 14px;
+    }
+
+    
 }
