--- a/files/assortments_files/style.css
+++ b/files/assortments_files/style.css
@@ -11,7 +11,7 @@ body {
     padding: 20px;
     font-size: 22px;
     line-height: 1.5;
-    margin-top: 150px;
+    margin-top: 0px;
     background-color: rgba(233, 181, 156, 0.92);
     border-radius: 10px;
     display: flex;
@@ -102,5 +102,9 @@ body {
         width: 95%;
         font-size: 18px;
         margin-bottom: 5px;
+    }
+
+    #section-title {
+        font-size: 28px;
     }
 }
