--- a/files/debug_files/style.css
+++ b/files/debug_files/style.css
@@ -10,7 +10,7 @@ body {
     text-align: center;
     padding: 20px;
     font-size: 22px;
-    line-height: 1.5;
+    line-height: 1;
     margin-top: 150px;
     background-color: rgba(233, 181, 156, 0.92);
     border-radius: 10px;
@@ -20,8 +20,8 @@ body {
 }
 
 #content > div {
-    margin: 50px;
-    width: 380px;
+    margin: 30px;
+    width: 280px;
     box-sizing: border-box;
     border: 1px solid #000;
     border-radius: 5px;
@@ -29,22 +29,22 @@ body {
 }
 
 #content img {
-    width: 360px;
-    height: 360px;
+    width: 95%;
+    height: auto;
     margin-top: 10px;
     border-radius: 5px;
 }
 
 #content > div > p {
     margin: 0;
-    padding: 5px;
+    padding: 2px;
     border-bottom: 1px solid #000;
 }
 
 #content button {
     background-color: rgba(118, 168, 141, 0.92);
     color: white;
-    padding: 12px 90px;
+    padding: 12px 60px;
     font-size: 28px;
     border: none;
     border-radius: 5px;
