--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,13 @@
-<header>
-  <app-header></app-header>
-</header>
-
-<footer>
-  <app-footer></app-footer>
-</footer> 
+<div class="min-h-dvh flex flex-col">
+  <header>
+    <app-header></app-header>
+  </header>
+  <main class="flex-grow">
+    <div>
+      <!-- <router-outlet></router-outlet> -->
+    </div>
+  </main>
+  <footer>
+    <app-footer></app-footer>
+  </footer> 
+</div>
