--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,5 +1,8 @@
-<div class="flex text-lg w-full py-3 px-8 bg-dark-900 text-white font-comfortaa">
-    <div class="flex w-1/3 my-auto">
+<div class="flex text-lg text-nowrap w-full py-3 px-8 bg-dark-900 text-white font-comfortaa">
+    <div class="lg:hidden my-auto text-2xl">
+        <app-sidebar></app-sidebar>
+    </div>
+    <div class="flex max-lg:justify-center max-lg:w-full w-1/3 my-auto">
         <button class="text-white hover:text-primary-200">
             <div class="flex space-x-3 my-auto">
                 <img src="https://bonitavita.lt/images/logo.png" style="width: 50px; height: auto;" class="" alt="Logo">
@@ -7,14 +10,18 @@
             </div>
         </button>
     </div>
-    <div class="flex w-2/3 justify-end my-auto">
-        <ul class="flex space-x-6">
-            <li><a class="text-white hover:text-primary-200">Главная</a></li>     
-            <li><a class="text-white hover:text-primary-200">Новинки</a></li>
-            <li><a class="text-white hover:text-primary-200">Ассортимент</a></li>
-            <li><a class="text-white hover:text-primary-200">Создать мыло</a></li>
-            <li><a class="text-white hover:text-primary-200">Контакты</a></li>
-            <li class="text-white hover:text-primary-200"><i class="fa-solid fa-globe my-auto"></i></li>
-        </ul>
+    <div class="lg:hidden my-auto">
+        <button class="text-white hover:text-primary-200"><i class="fa-solid fa-globe my-auto"></i></button>
+    </div>
+    <div class="flex space-x-6 w-2/3 justify-end my-auto max-lg:hidden">
+        <div>
+            <ul class="flex space-x-6">
+                <li><button class="text-white hover:text-primary-200">Новинки</button></li>
+                <li><button class="text-white hover:text-primary-200">Ассортимент</button></li>
+                <li><button class="text-white hover:text-primary-200">Создать мыло</button></li>
+                <li><button class="text-white hover:text-primary-200">Контакты</button></li>    
+                <li class="text-white hover:text-primary-200"><i class="fa-solid fa-globe my-auto"></i></li>
+            </ul>
+        </div>
     </div>
 </div>
