Grid list design

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,9 +2,9 @@
   <header>
     <app-header></app-header>
   </header>
-  <main class="flex-grow">
+  <main class="flex-grow bg-primary-900">
     <div>
-      <!-- <router-outlet></router-outlet> -->
+      <router-outlet></router-outlet>
     </div>
   </main>
   <footer>
