--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
-<div class="flex justify-center text-lg w-full py-3 px-8 bg-dark-900 text-white font-comfortaa">
+<div class="flex justify-center text-lg w-full py-3 px-8 bg-dark-900 font-comfortaa">
     <button class="text-white hover:text-primary-200">{{ email }}</button>
 </div>
