--- a/frontend/src/app/components/header/language-dropdown/language-dropdown.component.html
+++ b/frontend/src/app/components/header/language-dropdown/language-dropdown.component.html
@@ -1,21 +1,21 @@
 <div class="relative" ClickedOutside (clickOutside)="onClickedOutside()">
-    <button
-      class="relative z-10 block rounded-md overflow-hidden focus:outline-none focus:border-white"
-      (click)="toggleDropdown()">
-      <!-- <span class="fi fi-{{ currentLocale.flag | lowercase }} pt-1"></span> -->
-      <span class="pl-1">{{ currentLocale.code }}</span>
-    </button>
-    @if (dropdownOpen === true) {
-      <div class="absolute left-1/2 transform -translate-x-1/2 top-full mt-2 bg-dark-900 border-2 border-dark-500 rounded-none shadow-xl z-20">
-        @for (locale of locales; track locale) {
-          @if(locale.code !== currentLocale.code) {
-            <a class="block border-y border-dark-500 px-4 py-2 text-base capitalize text-white hover:bg-dark-400">
-              <!-- <span class="my-auto mr-1 fi fi-{{ locale.flag | lowercase }}"></span> -->
-              <span class="pl-1 uppercase">{{ locale.code }}</span>
-            </a>
-          }
+  <button
+    class="relative z-10 block rounded-md overflow-hidden focus:outline-none"
+    (click)="toggleDropdown()">
+    <!-- <span class="fi fi-{{ currentLocale.flag | lowercase }} pt-1"></span> -->
+    <span class="pl-1">{{ currentLocale.code }}</span>
+  </button>
+  @if (dropdownOpen === true) {
+    <div class="absolute left-1/2 transform -translate-x-1/2 top-full mt-2 bg-dark-900 rounded-none shadow-xl z-20">
+      @for (locale of locales; track locale) {
+        @if(locale.code !== currentLocale.code) {
+          <button class="w-full block px-4 py-2 text-base capitalize text-white hover:bg-primary-200">
+            <!-- <span class="my-auto mr-1 fi fi-{{ locale.flag | lowercase }}"></span> -->
+            <span class="pl-1 uppercase">{{ locale.code }}</span>
+          </button>
         }
-      </div>
-    }
-  </div>
+      }
+    </div>
+  }
+</div>
   
