Single page for the soaps

--- a/frontend/src/app/components/element/element-box/element-box.component.html
+++ b/frontend/src/app/components/element/element-box/element-box.component.html
@@ -1,5 +1,5 @@
 <div class="sm:w-60 w-48h-auto space-y-2">
-    <button>
+    <button (click)="onSoapPageOpen(soap.id)">
         <div class="sm:w-60 sm:h-60 w-48 h-48">
             <img src="{{ soap.image }}" alt="soap image"/>
             <div class="z-10 relative sm:bottom-60 bottom-48 flex justify-end">
