--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
         <!-- <p class="font-comfortaa text-xl">О нас</p> -->
         <div>
         </div>
-        <div class="font-comfortaa text-xl lg:px-48 md:px-36 sm:px-24 px-6 space-y-2">
+        <div class="font-comfortaa text-xl mx-auto w-3/4 space-y-2">
             <p>Натуральное мыло ручной работы</p>
             <p>
                 BonitaVita - производит мыло из натуральных, органических продуктов. 
