Image carousel variant 1

--- a/frontend/src/app/components/element/element-page/element-page.component.html
+++ b/frontend/src/app/components/element/element-page/element-page.component.html
@@ -1,14 +1,10 @@
-<div class="flex justify-center w-5/6 mx-auto my-4 space-x-10">
-    <div class="w-1/2 flex justify-end">
+<div class="lg:flex justify-center w-5/6 mx-auto my-4 space-x-10">
+    <div class="lg:w-1/2 w-full flex justify-end">
         <div class="w-10/12 h-auto">
-            @for (image of soap.images; track $index) {
-                <img class="carousel-image" src="{{ soap.images[$index] }}" alt="Soap Image">
-            <!-- <img class="carousel-image" src="../images/soap_images/1B.jpg" alt="Soap Image">
-            <img class="carousel-image" src="../images/soap_images/1C.jpg" alt="Soap Image"> -->
-            }
+            <app-image-carousel [images]="soap.images"></app-image-carousel>
         </div>
     </div>
-    <div class="w-1/2 space-y-2 text-base">
+    <div class="lg:w-1/2 w-full space-y-2 text-base">
         <div>
             <p class="font-bold text-4xl">{{ soap.name }}</p>
         </div>
@@ -20,16 +16,16 @@
                 <p class="text-gray-600">{{ soap.cost | currency:'EUR':'symbol':'1.2-2' }}</p>
             }
         </div>
-        <div class="flex1">
+        <div class="flex">
             <p><span class="font-bold mr-1">Вес:</span>{{ soap.weight }} г</p>
         </div>
-        <div class="flex1">
+        <div class="flex">
             <p><span class="font-bold mr-1">Аромат:</span>{{ soap.aroma }}</p>
         </div>
-        <div class="flex1">
+        <div class="flex">
             <p><span class="font-bold mr-1">Ингредиенты:</span>{{ soap.ingredients }}</p>
         </div>
-        <div class="flex1">
+        <div class="flex">
             <p><span class="font-bold mr-1">Описание:</span>{{ soap.description }}</p>
         </div>
     </div>
