--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -18,3 +18,7 @@
 <div class="mb-4">
     <app-grid-list></app-grid-list>
 </div>
+
+<div class="w-10/12 mx-auto my-40">
+    <img src="https://va-love.site/images/map.png" class="w-screen h-auto">
+</div>
