--- a/frontend/src/app/components/element/element-box/element-box.component.html
+++ b/frontend/src/app/components/element/element-box/element-box.component.html
@@ -1,6 +1,6 @@
-<div class="sm:w-60 w-48h-auto space-y-2">
+<div class="sm:w-60 w-48h-auto space-y-2 hover:shadow-2xl transition-shadow duration-300">
     <button (click)="onSoapPageOpen(soap.id)">
-        <div class="sm:w-60 sm:h-60 w-48 h-48">
+        <div class="sm:w-60 sm:h-60 w-48 h-48 mx-auto">
             <img src="{{ soap.image }}" alt="soap image"/>
             <div class="z-10 relative sm:bottom-60 bottom-48 flex justify-end">
                 @if (soap.tag) {
@@ -12,20 +12,20 @@
         </div>
         <div class="text-center space-y-2">
             <div>
-                <p class="text-lg font-bold">{{ soap.name }}</p>
+                <p class="text-lg font-semibold">{{ soap.name }}</p>
                 <div class="flex justify-center space-x-1">
                     @if (soap.sale && soap.sale < soap.cost) {
                         <p class="text-red-500 font-semibold">{{ soap.sale | currency:'EUR':'symbol':'1.2-2' }}</p>
-                        <p class="text-gray-600 line-through">{{ soap.cost | currency:'EUR':'symbol':'1.2-2' }}</p>
+                        <p class="line-through">{{ soap.cost | currency:'EUR':'symbol':'1.2-2' }}</p>
                     } @else {
-                        <p class="text-gray-600">{{ soap.cost | currency:'EUR':'symbol':'1.2-2' }}</p>
+                        <p class="">{{ soap.cost | currency:'EUR':'symbol':'1.2-2' }}</p>
                     }
                 </div>
             </div>
         </div>
     </button>
     <div>
-        <button class="bg-emerald-500 hover:bg-yellow-300 p-1 w-full">
+        <button class="bg-secondary-900 hover:bg-yellow-300 p-1 w-full">
             Add to favorites ❤️
         </button>
     </div>
