Header navigation updated

--- a/frontend/src/app/components/header/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/header/sidebar/sidebar.component.html
@@ -1,14 +1,14 @@
 <div ClickedOutside (clickOutside)="onClickedOutside()">
-    <button class="text-zinc-300 focus:outline-none" (click)="toggleDropdown()">
-      <i class="fa-solid fa-bars"></i>
-    </button>
-    <div class="z-50 lg:hidden fixed inset-y-0 left-0 w-64 bg-dark-900 text-white transition-transform duration-300 transform"
-      [class.translate-x-0]="dropdownOpen" [class.-translate-x-full]="!dropdownOpen">
-      <ul class="px-6 py-1 mt-6 flex flex-col space-y-6 items-start h-full">
-        @for (section of menuSections; track $index) {
-          <li><a class="text-white hover:text-primary-200">{{ section }}</a></li>
-        }
-      </ul>
-    </div>
+  <button class="text-zinc-300 focus:outline-none" (click)="toggleDropdown()">
+    <i class="fa-solid fa-bars"></i>
+  </button>
+  <div class="z-50 lg:hidden fixed inset-y-0 left-0 w-64 bg-dark-900 text-white transition-transform duration-300 transform"
+    [class.translate-x-0]="dropdownOpen" [class.-translate-x-full]="!dropdownOpen">
+    <ul class="px-6 py-1 mt-6 flex flex-col space-y-6 items-start h-full">
+      @for (m of menu; track $index) {
+        <li><a class="text-white hover:text-primary-200" routerLink="{{ m.route }}">{{ m.name }}</a></li>
+      }
+    </ul>
   </div>
+</div>
   
