--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="flex text-lg text-nowrap w-full py-3 px-8 bg-dark-900 text-white font-comfortaa">
     <div class="lg:hidden my-auto text-2xl">
-        <app-sidebar [menuSections]="menuSections"></app-sidebar>
+        <app-sidebar [menu]="menu"></app-sidebar>
     </div>
     <div class="flex max-lg:justify-center max-lg:w-full w-1/3 my-auto">
         <a class="text-white hover:text-primary-200" routerLink="/">
@@ -21,8 +21,8 @@
     <div class="flex space-x-6 w-2/3 justify-end my-auto max-lg:hidden">
         <div>
             <ul class="flex space-x-6">
-                @for (section of menuSections; track $index) {
-                    <li><a class="text-white hover:text-primary-200">{{ section }}</a></li>  
+                @for (m of menu; track $index) {
+                    <li><a class="text-white hover:text-primary-200" routerLink="{{ m.route }}">{{ m.name }}</a></li>  
                 } 
                 <li class="text-white hover:text-primary-200"><app-language-dropdown></app-language-dropdown></li>
             </ul>
