Trying to create datatypes for filters

--- a/frontend/src/app/assortment/assortment.component.html
+++ b/frontend/src/app/assortment/assortment.component.html
@@ -1,6 +1,8 @@
 <div class="my-8 flex w-5/6 mx-auto justify-center space-x-8">
-    <div class="w-1/6 flex justify-end text-end">
-        <app-filter></app-filter>
+    <div class="w-1/6 flex">
+        <div class="w-full">
+            <app-filter></app-filter>
+        </div>
     </div>
     <div class="w-5/6 flex justify-start">
         <div class="space-y-4">
