--- a/frontend/src/app/filter/filter.component.html
+++ b/frontend/src/app/filter/filter.component.html
@@ -1,40 +1,31 @@
-<div class="w-1/6 flex justify-end text-end">
-    <div class="w-full">
-        <div class="mb-4">
-            <button class="w-full text-left bg-gray-200 p-2 rounded" onclick="toggleSection('category')">Category</button>
-            <div id="category" class="hidden mt-2">
-                <!-- Category filters go here -->
-                <p>Category 1</p>
-                <p>Category 2</p>
-                <p>Category 3</p>
-            </div>
+<div class="w-full">
+  <div class="space-y-2">
+    @if (filter) {
+      <div *ngFor="let section of [filter.category, filter.tags]; let i = index" class="space-y-4">
+        <div class="cursor-pointer w-full flex justify-between text-lg font-semibold hover:text-secondary-900" (click)="toggleSpoiler(i)">
+          <h3 class="">{{ section.sectionName }}</h3>
+          <span class="text-xl font-bold">
+            {{ isSpoilerVisible[i] ? '-' : '+' }}
+          </span>
         </div>
-        <div class="mb-4">
-            <button class="w-full text-left bg-gray-200 p-2 rounded" onclick="toggleSection('cost')">Cost</button>
-            <div id="cost" class="hidden mt-2">
-                <!-- Cost filters go here -->
-                <p>$0 - $10</p>
-                <p>$10 - $20</p>
-                <p>$20 - $30</p>
+        <div class="w-full transition-all duration-300 ease-in-out text-left" [ngClass]="{'hidden': !isSpoilerVisible[i]}">
+          <div class="space-y-2">
+            <div *ngFor="let field of section.sectionFields" class="flex justify-between hover:text-secondary-900">
+              <label class="inline-flex items-center">
+                <input type="checkbox" class="form-checkbox" [(ngModel)]="field.isFieldSelected">
+                <span class="ml-2">{{ field.fieldName }}</span>
+              </label>
+              <span>{{ field.fieldAmount }}</span>
             </div>
+          </div>
         </div>
-        <div class="mb-4">
-            <button class="w-full text-left bg-gray-200 p-2 rounded" onclick="toggleSection('tags')">Tags</button>
-            <div id="tags" class="hidden mt-2">
-                <!-- Tag filters go here -->
-                <p>Tag 1</p>
-                <p>Tag 2</p>
-                <p>Tag 3</p>
-            </div>
-        </div>
-        <div class="mb-4">
-            <button class="w-full text-left bg-gray-200 p-2 rounded" onclick="toggleSection('sort')">Sort by</button>
-            <div id="sort" class="hidden mt-2">
-                <!-- Sort options go here -->
-                <p>Sort by Price</p>
-                <p>Sort by Popularity</p>
-                <p>Sort by Rating</p>
-            </div>
-        </div>
-    </div>
+      </div>
+    }
+  </div>
 </div>
+
+<style>
+  .hidden {
+    display: none;
+  }
+</style>
