Assortment title added

--- a/frontend/src/app/filter/filter.component.html
+++ b/frontend/src/app/filter/filter.component.html
@@ -93,6 +93,10 @@
         </div>
       }
     </div>
+    <div class="flex-col space-y-2 pt-4 mt-4 border-t border-dark-900">
+      <input type="text" placeholder="Enter soap name here" class="w-full p-2 border border-gray-300">
+      <button class="w-full p-2 bg-secondary-900 hover:bg-secondary-600 text-nowrap">Search 🔍</button>
+    </div>
 </div>
   
 <style>
