--- a/frontend/src/app/assortment/assortment.component.html
+++ b/frontend/src/app/assortment/assortment.component.html
@@ -1,4 +1,7 @@
-<div class="my-8 flex w-5/6 mx-auto justify-center space-x-8">
+<div class="w-full">
+    <app-assortment-title></app-assortment-title>
+</div>
+<div class="my-10 flex w-5/6 mx-auto justify-center space-x-8">
     <div class="w-1/6 flex">
         <div class="w-full">
             <app-filter></app-filter>
@@ -6,10 +9,10 @@
     </div>
     <div class="w-5/6 flex justify-start">
         <div class="space-y-4">
-            <div class="flex">
+            <!-- <div class="flex">
                 <input type="text" placeholder="Enter soap name here" class="flex-grow p-2 border border-gray-300">
-                <button class="w-24 ml-2 px-4 py-2 bg-secondary-900 hover:bg-secondary-600 text-nowrap">Search 🔍</button>
-            </div>
+                <button class="w-36 ml-2 px-4 py-2 bg-secondary-900 hover:bg-secondary-600 text-nowrap">Search 🔍</button>
+            </div> -->
             <div class="overflow-hidden">
                 <app-grid-list></app-grid-list>
             </div>
